# daoyi-cloud-axum

./: Cargo.toml  README.md
crates/libs/daoyi-axum-app/: Cargo.toml  README.md
crates/libs/daoyi-axum-app/src/: lib.rs
crates/libs/daoyi-axum-app/src/app/: common.rs  database.rs  mod.rs  sea_orm_utils.rs  server.rs  validation.rs
crates/libs/daoyi-axum-app/src/app/auth/: mod.rs
crates/libs/daoyi-axum-app/src/app/auth/jwt/: middleware.rs  mod.rs
crates/libs/daoyi-axum-config/: Cargo.toml  README.md
crates/libs/daoyi-axum-config/src/: lib.rs
crates/libs/daoyi-axum-config/src/config/: mod.rs
crates/libs/daoyi-axum-support/: Cargo.toml  README.md
crates/libs/daoyi-axum-support/src/: lib.rs
crates/libs/daoyi-axum-support/src/support/: error.rs  id.rs  json.rs  latency.rs  mod.rs  passwd.rs  path.rs  query.rs  response.rs  valid.rs
crates/sea-orm-entities/daoyi-sea-orm-entity-demo/: Cargo.toml  README.md
crates/sea-orm-entities/daoyi-sea-orm-entity-demo/src/: lib.rs
crates/sea-orm-entities/daoyi-sea-orm-entity-demo/src/demo/: mod.rs
crates/sea-orm-entities/daoyi-sea-orm-entity-demo/src/demo/entity/: demo_contact.rs  demo_sys_user.rs  mod.rs  prelude.rs
docs/: KDE_KEYBOARD_SHORTCUTS.md
docs/example/web-starter/db/: gen-entity.sh  schema.sql
docs/example/web-starter/db/src/demo/entity/: demo_category.rs  demo_contact.rs  demo_student.rs  demo_sys_user.rs  prelude.rs
example/web-starter/: Cargo.toml  README.md
example/web-starter/src/: app.rs  common.rs  database.rs  enumeration.rs  error.rs  id.rs  json.rs  latency.rs  logger.rs  main.rs  path.rs  query.rs  response.rs  serde.rs  server.rs  valid.rs  validation.rs
example/web-starter/src/api/: auth.rs  mod.rs  user.rs
example/web-starter/src/config/: database.rs  mod.rs  server.rs  sys.rs
example/web-starter/src/demo/entity/: demo_category.rs  demo_contact.rs  demo_course.rs  demo_grade.rs  demo_student.rs  demo_sys_user.rs  mod.rs  prelude.rs
example/web-starter/src/web/: mod.rs
example/web-starter/web/: .gitignore  commitlint.config.ts  env.d.ts  eslint.config.ts  index.html  package-lock.json  package.json  postcss.config.js  stylelint.config.js  vite.config.ts
example/web-starter/web/src/: app.tsx  main.tsx
example/web-starter/web/src/apis/: auth.ts  http.ts  query.ts  user.ts
example/web-starter/web/src/components/config-provider/: config-provider.tsx  css-variables-resolver.ts  index.ts  theme.ts
example/web-starter/web/src/components/error/: error.tsx  index.ts
example/web-starter/web/src/components/form/: context.ts  form.ts
example/web-starter/web/src/components/form/field-components/: date-picker.tsx  index.ts  password-input.tsx  radio-select.tsx  switch.tsx  text-input.tsx
example/web-starter/web/src/components/form/form-components/: form.tsx  index.ts  submit-button.tsx
example/web-starter/web/src/components/loading-placeholder/: index.ts  loading-placeholder.tsx  props.ts
example/web-starter/web/src/components/not-found/: index.ts  not-found.tsx
example/web-starter/web/src/pages/: __root.tsx
example/web-starter/web/src/pages/_common/: login.module.css  login.tsx
example/web-starter/web/src/pages/_layout/: index.tsx  route.tsx  users.module.css
example/web-starter/web/src/router/: index.ts  router.gen.ts
example/web-starter/web/src/stores/: app.ts
example/web-starter/web/src/styles/: base.css  index.css
resources/: example-web-starter-dev.yaml
src/: main.rs
