[package]
name = "daoyi-cloud-axum"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "daoyi-cloud-axum aggregated server entry point"
license.workspace = true
repository.workspace = true
readme.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
publish = false

[dependencies]

[workspace]
members = [
    ".", "example/*",
]
resolver = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[workspace.package]
version = "0.9.0"
edition = "2024"
rust-version = "1.94.0"
description = "Rust cloud-native microservice scaffold based on Axum + SeaORM + MySQL"
license = "MIT"
repository = "https://github.com/gemiman/daoyi-cloud-axum"
readme = "README.md"
authors = ["兰陵王 <gemiman@vip.qq.com>"]
keywords = ["axum", "sea-orm", "microservice", "mysql", "openapi"]
categories = ["web-programming", "web-programming::http-server"]

[workspace.dependencies]
# third party
axum = { version = "0.8.9" }
tokio = { version = "1.52.3", features = ["full"] }