# =============================================================================
# 根 crate 配置
# =============================================================================
[package]
name = "daoyi-cloud-axum"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "daoyi-cloud-axum aggregated server entry point"
license.workspace = true
repository.workspace = true
readme.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
publish = false

[dependencies]

# =============================================================================
# Cargo Workspace
# =============================================================================
[workspace]
members = [
    ".",
    "crates/libs/*",
    "crates/sea-orm-entities/*",
    "example/*",
]
resolver = "2"

# =============================================================================
# Release 构建优化配置
#
# - LTO:      全链接时优化，提升运行速度并减小体积
# - codegen-u: 单代码生成单元，最大化内联优化
# - strip:    移除符号表，进一步减小二进制体积
# - panic:    abort 替代 unwind，减小体积并加快 panic 路径
# =============================================================================
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

# =============================================================================
# Workspace 级别共享元数据
#
# 所有 workspace 成员通过 `*.workspace = true` 继承这些字段。
# =============================================================================
[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.94.0"
description = "Rust cloud-native microservice scaffold based on Axum + SeaORM + MySQL"
license = "MIT"
repository = "https://github.com/gemiman/daoyi-cloud-axum"
readme = "README.md"
authors = ["兰陵王 <gemiman@vip.qq.com>"]
keywords = ["axum", "sea-orm", "microservice", "mysql", "openapi"]
categories = ["web-programming", "web-programming::http-server"]

# =============================================================================
# Workspace 级别共享依赖
#
# 所有 workspace 成员通过 `crate_name.workspace = true` 引用这些依赖，
# 确保整个工作区使用统一的版本号。
# =============================================================================
[workspace.dependencies]
# --- 通用 ---
daoyi-axum-config = { version = "0.1.0", path = "crates/libs/daoyi-axum-config" }
daoyi-axum-support = { version = "0.1.0", path = "crates/libs/daoyi-axum-support" }
daoyi-axum-app = { version = "0.1.0", path = "crates/libs/daoyi-axum-app" }

# --- 实体 ---
daoyi-sea-orm-entity-demo = { version = "0.1.0", path = "crates/sea-orm-entities/daoyi-sea-orm-entity-demo" }

# --- Web / Async ---
axum = { version = "0.8.9", features = ["macros"] }
tokio = { version = "1.52.3", features = ["full"] }
tower-http = { version = "0.6.11", features = ["trace", "timeout", "limit", "cors", "normalize-path", "auth"] }

# --- Observability ---
tracing = { version = "0.1.44", features = ["async-await"] }
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "chrono"] }

# --- Config & Serde ---
config = { version = "0.15.23", features = ["yaml"] }
serde = { version = "1.0.228", features = ["derive"] }

# --- Error Handling ---
anyhow = { version = "1.0.102" }
thiserror = { version = "2.0.18" }

sea-orm = { version = "2.0.0-rc.38", features = [
    "with-chrono",
    "debug-print",
    "sqlx-mysql", "runtime-tokio-rustls",
    "with-rust_decimal",
    "runtime-tokio"] }
num_cpus = { version = "1.17.0" }
xid = { version = "1.1.1" }
bytesize = { version = "2.3.1" }
validator = { version = "0.20.0", features = ["derive"] }
axum-valid = { version = "0.24.0", features = ["full_validator"] }
regex = { version = "1.12.3" }
idgenerator = { version = "2.0.0" }
bcrypt = { version = "0.19.1" }
jsonwebtoken = { version = "10.4.0" }
