[package]
name = "web-starter"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
axum.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
config.workspace = true
serde.workspace = true
anyhow.workspace = true
sea-orm.workspace = true
num_cpus.workspace = true
thiserror.workspace = true
tower-http.workspace = true
xid.workspace = true