[package]
name = "web-starter"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

# =============================================================================
# 所有依赖版本由 workspace 统一管理，此处仅声明使用哪些依赖
# =============================================================================
[dependencies]
# --- Web 框架 ---
axum.workspace = true
tower-http.workspace = true

# --- 异步运行时 ---
tokio.workspace = true

# --- 可观测性 ---
tracing.workspace = true
tracing-subscriber.workspace = true

# --- 配置管理 ---
config.workspace = true
serde.workspace = true

# --- 错误处理 ---
anyhow.workspace = true
thiserror.workspace = true

# --- ORM 数据库 ---
sea-orm.workspace = true

# --- 工具库 ---
num_cpus.workspace = true    # CPU 核心数检测（用于连接池大小计算）
xid.workspace = true         # 全局唯一 ID 生成（请求追踪）
bytesize.workspace = true    # 人类可读的字节大小表示
idgenerator.workspace = true
bcrypt.workspace = true

# --- 参数校验 ---
validator.workspace = true
axum-valid.workspace = true
regex.workspace = true