[package]
name = "web-starter"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
publish = false

# =============================================================================
# 所有依赖版本由 workspace 统一管理，此处仅声明使用哪些依赖
# =============================================================================
[dependencies]
daoyi-axum-app.workspace = true
daoyi-axum-support.workspace = true
daoyi-sea-orm-entity-demo.workspace = true

# --- Web 框架 ---
axum.workspace = true

# --- 异步运行时 ---
tokio.workspace = true

# --- 可观测性 ---
tracing.workspace = true

# --- 配置管理 ---
serde.workspace = true

# --- 错误处理 ---
anyhow.workspace = true

# --- ORM 数据库 ---
sea-orm.workspace = true

# --- 参数校验 ---
validator.workspace = true