[package]
name = "daoyi-axum-support"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
sea-orm.workspace = true
serde.workspace = true
anyhow.workspace = true
idgenerator.workspace = true
bcrypt.workspace = true
axum.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
