[package]
name = "daoyi-sea-orm-entity-demo"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
daoyi-axum-support.workspace = true

sea-orm.workspace = true
serde.workspace = true
